[package]
name = "amplify"
version = "4.0.0-beta.7"
description = "Amplifying Rust language capabilities: multiple generic trait implementations, type wrappers, derive macros"
authors = [
    "Dr. Maxim Orlovsky <orlovsky@pandoracore.com>",
    "Martin Habovstiak <martin.habovstiak@gmail.com>",
]
keywords = ["generics", "core", "no_std", "wrap", "patterns"]
categories = ["data-structures", "no-std", "rust-patterns"]
repository = "https://github.com/rust-amplify/rust-amplify"
homepage = "https://github.com/rust-amplify"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.60.0"
exclude = [
    ".github",
    "derive",
    "syn",
    "num",
    "serde_str_helpers",
    "stringly_conversions",
]

[lib]
name = "amplify"
path = "src/lib.rs"
# Allow --save-baseline to work
# https://github.com/bheisler/criterion.rs/issues/275
bench = false

[dependencies]
libc = { version = "0.2", optional = true }
amplify_derive = { version = "4.0.0-alpha.2", path = "./derive", optional = true }
amplify_syn = { version = "1.1", path = "./syn", optional = true }
amplify_num = { version = "0.4.0", path = "./num" }
amplify_apfloat = { version = "0.1.1", path = "./apfloat", optional = true }
parse_arg = { version = "0.1.4", optional = true }
ascii = "1.1.0"
rand = { version = "0.8.4", optional = true }
# This strange naming is a workaround for not being able to define required features for a dependency
# See https://github.com/rust-lang/api-guidelines/issues/180 for the explanation and references.
serde_crate = { package = "serde", version = "1.0", features = [
    "derive",
], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.5", optional = true }
stringly_conversions = { version = "0.1.1", optional = true, features = [
    "alloc",
] }

# avoid building criterion in 1.41.1 CI
[target.'cfg(bench)'.dev-dependencies]
criterion = "0.4"
softposit = "0.3.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
all = [
    "serde",
    "std",
    "parse_arg",
    "stringly_conversions",
    "c_raw",
    "proc_attr",
    "derive",
    "rand",
    "apfloat",
    "apfloat_std",
]
default = ["std", "derive", "hex"]
std = ["amplify_num/std"]
apfloat_std = ["amplify_apfloat/std"]
alloc = ["amplify_num/alloc"]
apfloat_alloc = ["amplify_apfloat/alloc"]
c_raw = ["libc", "std"]
hex = ["amplify_num/hex"]
apfloat = ["amplify_apfloat"]
proc_attr = ["amplify_syn"]
derive = ["amplify_derive"]
serde = [
    "serde_crate",
    "std",
    "serde_yaml",
    "serde_json",
    "toml",
    "amplify_num/serde",
    "ascii/serde",
    "stringly_conversions",
    "stringly_conversions/alloc",
    "stringly_conversions/serde_str_helpers",
]

[target.'cfg(target_arch = "wasm32")'.features]
all = [
    "serde",
    "std",
    "parse_arg",
    "stringly_conversions",
    "c_raw",
    "proc_attr",
    "derive",
    "rand",
    "getrandom",
    "apfloat",
    "apfloat_std",
]
default = ["std", "derive", "hex"]
std = ["amplify_num/std"]
apfloat_std = ["amplify_apfloat/std"]
alloc = ["amplify_num/alloc"]
apfloat_alloc = ["amplify_apfloat/alloc"]
c_raw = ["libc", "std"]
hex = ["amplify_num/hex"]
apfloat = ["amplify_apfloat"]
proc_attr = ["amplify_syn"]
derive = ["amplify_derive"]
serde = [
    "serde_crate",
    "std",
    "serde_yaml",
    "serde_json",
    "toml",
    "amplify_num/serde",
    "stringly_conversions",
    "stringly_conversions/alloc",
    "stringly_conversions/serde_str_helpers",
]

[workspace]
members = [
    ".",
    "num",
    "apfloat",
    "derive",
    "syn",
    "serde_str_helpers",
    "stringly_conversions",
]
default-members = ["."]

[[bench]]
name = "bench"
harness = false
