[package]
authors = ["The Rust Project Developers", "Yudai Kiyofuji <own7000hr@gmail.com>"]
name = "amplify_apfloat"
version = "0.1.3"
description = "rustc_apfloat with u256 backend to utilize Octuple precision floating-point format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-amplify/rust-amplify"
homepage = "https://github.com/rust-amplify"
categories = ["no-std"]
readme = "../README.md"
keywords = ["float"]
edition = "2021"
rust-version = "1.59.0"

[features]
default = ["std"]
alloc = ["amplify_num/alloc"]
std = ["amplify_num/std"]

[dependencies]
amplify_num = { version = "0.4.0", path = "../num", default-features = false }
bitflags = "1.0"
