[package]
name = "amplify_derive"
version = "2.5.1"
description = "Amplifying Rust language capabilities: derive macros for the 'amplify' library"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>", "Elichai Turkel <elichai.turkel@gmail.com>"]
keywords = ["generics", "derive", "wrap", "patterns"]
categories = ["data-structures", "rust-patterns"]
repository = "https://github.com/LNP-BP/rust-amplify"
homepage = "https://github.com/LNP-BP"
license = "MIT"
readme = "README.md"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
proc-macro = true
name = "amplify_derive"
path = "src/lib.rs"

[dependencies]
quote = "1.0.7"
syn = "1.0.58"
proc-macro2 = "1.0.23"

[dev-dependencies]
amplify = { path = ".." }
