[package]
name = "amplify_derive"
version = "4.0.0-alpha.3"
description = "Amplifying Rust language capabilities: derive macros for the 'amplify' library"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>", "Elichai Turkel <elichai.turkel@gmail.com>"]
keywords = ["generics", "derive", "wrap", "patterns"]
categories = ["data-structures", "rust-patterns", "no-std"]
repository = "https://github.com/rust-amplify/rust-amplify"
homepage = "https://github.com/rust-amplify"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.60.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
proc-macro = true
name = "amplify_derive"
path = "src/lib.rs"

[dependencies]
quote = "1"
syn = "1.0.103"
proc-macro2 = "1"
amplify_syn = { version = "1.1", path = "../syn" }

[dev-dependencies]
amplify = { path = ".." }
