[package]
name = "amplify_num"
version = "0.1.0"
description = "Amplifying numeric types: big-sized and bit-sized integers"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
keywords = ["generics", "num", "wrap", "patterns"]
categories = ["mathematics", "no-std", "embedded", "science"]
repository = "https://github.com/LNP-BP/rust-amplify"
homepage = "https://github.com/LNP-BP"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
# This strange naming is a workaround for not being able to define required features for a dependency
# See https://github.com/rust-lang/api-guidelines/issues/180 for the explanation and references.
serde_crate = { package = "serde", version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
bincode = "1.3.3"
serde_crate = { package = "serde", version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"

[features]
default = []
all = ["std", "hex", "serde"]
std = []
serde = ["std", "serde_crate", "hex"]
hex = ["std"]
