[package]
name = "serde_str_helpers"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>", "Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
edition = "2018"
keywords = ["serde", "deserialization", "zero-copy", "patterns"]
categories = ["data-structures", "rust-patterns"]
repository = "https://github.com/LNP-BP/rust-amplify"
homepage = "https://github.com/LNP-BP"
license = "MIT"
readme = "README.md"

[dependencies]
# serde is the whole point of this library, so we need it :)
serde = "1.0.116"
serde_derive = "1.0.116"

[dev-dependencies]
# Just some arbitrary deserializer to test this crate on
serde_json = "1.0.57"
