[package]
name = "stringly_conversions"
version = "0.1.0"
description = "A crate helping to convert to/from various representations of strings."
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
keywords = ["macros", "try_from", "string", "no_std", "patterns"]
categories = ["no-std", "rust-patterns"]
repository = "https://github.com/LNP-BP/rust-amplify"
homepage = "https://github.com/LNP-BP"
license = "MIT"
readme = "README.md"
edition = "2018"

[features]
alloc = []

[dependencies]
serde_str_helpers = { version = "0.1", optional = true }
paste = "1.0.1"
