[package]
name = "amplify_syn"
version = "1.1.6"
description = "Amplifying syn capabilities: helper functions for creating proc macro libraries"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
keywords = ["generics", "derive", "wrap", "patterns"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
repository = "https://github.com/rust-amplify/rust-amplify"
homepage = "https://github.com/rust-amplify"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
syn = "1"
proc-macro2 = "1"
quote = "1"
